# taha

./: .gitignore  AGENTS.md  CONTEXT.md  ETABS21_REGLA_LICENCIA.md  MAESTRO.md  PLAN-DE-TRABAJO.md  PLAN.md  RETOMAR.md  contexto-un solo uso.md  feature_list.json  resultados investigacion 2.md  resultados investigacion.md
.agente/: config.json  (+1 more)
app transcripciones/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app transcripciones/configs/: courses.yaml  gating_rules.yaml  models.yaml  naming_rules.yaml  paths.yaml
app transcripciones/notebooks/: 01_ingest_and_transcribe.ipynb  02_build_sessions.ipynb  03_process_base_documents.ipynb  04_generate_study_assets.ipynb  05_pre_exam_review.ipynb  06_debug_and_audit.ipynb
app transcripciones/prompts/: build_visual_text.md  clean_transcript.md  describe_figure.md  generate_exam_questions.md  generate_flashcards.md  link_base_docs.md  structure_session.md  unit_review.md  weekly_review.md
app transcripciones/src/cis/: __init__.py  __main__.py
app transcripciones/src/cis/assets/: __init__.py  exam_questions.py  flashcards.py  formula_sheet.py  summary_generator.py  unit_review.py  weekly_review.py
app transcripciones/src/cis/audit/: __init__.py  context_audit.py  error_reporter.py  logging_setup.py  run_report.py
app transcripciones/tests/: conftest.py  test_base_doc_segmenter.py  test_course_index.py  test_gating.py  test_registry.py  test_runtime_regressions.py  test_session_builder.py  test_structuring_quality.py  test_transcription_pipeline.py  test_visual_text_builder.py
(+553 files in other folders)
